// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders table when data is still loading 1`] = `
<Table
  currency="usd"
  data="usd"
  date={null}
  label="Exchange Rates from"
  loading="The data is currenly loading"
>
  <LoadingData />
  <RenderTable>
    <div
      className="testClass"
    >
      <div
        className="current-date"
      >
        <label
          className="exchange-date-label"
        >
          Exchange Rates from
           
        </label>
      </div>
      <div
        id="table-component"
      >
        <table
          id="table"
        >
          <TableHead
            columnNames={
              Array [
                "Conversion Rates below 1",
                "Conversion Rates between 1 and 1,5",
                "Conversion Rates above 1,5",
              ]
            }
          >
            <thead
              className="table-head"
            >
              <tr>
                <th
                  key="0"
                >
                  Conversion Rates below 1
                </th>
                <th
                  key="1"
                >
                  Conversion Rates between 1 and 1,5
                </th>
                <th
                  key="2"
                >
                  Conversion Rates above 1,5
                </th>
              </tr>
            </thead>
          </TableHead>
          <TableBody
            countField="Count: "
            data={
              Array [
                Array [],
                Array [],
                Array [],
              ]
            }
          >
            <tbody
              id="table-body"
            >
              <TableData />
              <TableColumnsLenghts>
                <tr
                  className="table-row"
                >
                  <td
                    className="table-col"
                    key="0"
                  >
                    Count: 
                     
                    0
                  </td>
                  <td
                    className="table-col"
                    key="1"
                  >
                    Count: 
                     
                    0
                  </td>
                  <td
                    className="table-col"
                    key="2"
                  >
                    Count: 
                     
                    0
                  </td>
                </tr>
              </TableColumnsLenghts>
            </tbody>
          </TableBody>
        </table>
      </div>
    </div>
  </RenderTable>
</Table>
`;

exports[`renders table with label when all props are provided 1`] = `
<Table
  currency="usd"
  data={
    Object {
      "afn": "85.586079",
      "aud": "0.014107",
      "bgn": "2.618904",
      "cad": "1.759853",
      "eur": "3.673103",
    }
  }
  date="2022-08-22"
  label="Exchange Rates from"
  loading="The data is currenly loading"
>
  <LoadingData />
  <RenderTable>
    <div
      className="testClass"
    >
      <div
        className="current-date"
      >
        <label
          className="exchange-date-label"
        >
          Exchange Rates from
           
          2022-08-22
        </label>
      </div>
      <div
        id="table-component"
      >
        <table
          id="table"
        >
          <TableHead
            columnNames={
              Array [
                "Conversion Rates below 1",
                "Conversion Rates between 1 and 1,5",
                "Conversion Rates above 1,5",
              ]
            }
          >
            <thead
              className="table-head"
            >
              <tr>
                <th
                  key="0"
                >
                  Conversion Rates below 1
                </th>
                <th
                  key="1"
                >
                  Conversion Rates between 1 and 1,5
                </th>
                <th
                  key="2"
                >
                  Conversion Rates above 1,5
                </th>
              </tr>
            </thead>
          </TableHead>
          <TableBody
            countField="Count: "
            data={
              Array [
                Array [
                  Array [
                    "aud",
                    "0.014107",
                  ],
                ],
                Array [],
                Array [
                  Array [
                    "cad",
                    "1.759853",
                  ],
                  Array [
                    "bgn",
                    "2.618904",
                  ],
                  Array [
                    "eur",
                    "3.673103",
                  ],
                ],
              ]
            }
          >
            <tbody
              id="table-body"
            >
              <TableData>
                <tr
                  className="table-row"
                  key="0"
                >
                  <td
                    className="table-col"
                    key="0"
                  >
                    aud
                     
                    0.014107
                  </td>
                  <td
                    className="table-col"
                    key="1"
                  >
                     
                  </td>
                  <td
                    className="table-col"
                    key="2"
                  >
                    cad
                     
                    1.759853
                  </td>
                </tr>
                <tr
                  className="table-row"
                  key="1"
                >
                  <td
                    className="table-col"
                    key="0"
                  >
                     
                  </td>
                  <td
                    className="table-col"
                    key="1"
                  >
                     
                  </td>
                  <td
                    className="table-col"
                    key="2"
                  >
                    bgn
                     
                    2.618904
                  </td>
                </tr>
                <tr
                  className="table-row"
                  key="2"
                >
                  <td
                    className="table-col"
                    key="0"
                  >
                     
                  </td>
                  <td
                    className="table-col"
                    key="1"
                  >
                     
                  </td>
                  <td
                    className="table-col"
                    key="2"
                  >
                    eur
                     
                    3.673103
                  </td>
                </tr>
              </TableData>
              <TableColumnsLenghts>
                <tr
                  className="table-row"
                >
                  <td
                    className="table-col"
                    key="0"
                  >
                    Count: 
                     
                    1
                  </td>
                  <td
                    className="table-col"
                    key="1"
                  >
                    Count: 
                     
                    0
                  </td>
                  <td
                    className="table-col"
                    key="2"
                  >
                    Count: 
                     
                    3
                  </td>
                </tr>
              </TableColumnsLenghts>
            </tbody>
          </TableBody>
        </table>
      </div>
    </div>
  </RenderTable>
</Table>
`;
